--- a/index.html
+++ b/index.html
@@ -181,18 +181,19 @@
 
 
                      <div class="pricelistdiv12" style="display:block;">
-                        <h4>Pre-Register here for Best Offers</h4>
-                        <div class="form_inner" >
-                           <input type="text" name="name" class="form-control" placeholder="Name"
-                              id="qSenderNamemobile">
-                           <input type="text" name="Mobile No." class="form-control" placeholder="Mobile No"
-                              id="qMobileNomobile">
-                           <input type="email" name="email" class="form-control" placeholder="E-Mail Address"
-                              id="qEmailIDmobile">
-                           <input class="form-control" type="text" placeholder="Comments.." name="Message"
-                              id="qMessagemobile">
-                           <button type="button" class="btn btn-warning enquire-btn effetMoveGradient effectScale"
-                           data-toggle="modal" data-target="#exampleModal">submit11</button>
+                        <h4 class="best_offer">Pre-Register here for Best Offers</h4>
+                        <div class="form_inner" id=" ">
+                           <div class="flex-fill align-self-center flex-shrink-1 modal-highlight-bg d-none d-lg-block">
+                              <span class="modal-highlight-title">We Promise</span>
+                              <ul class="modal-highlight">
+                                 <li><img src="images/modal-coll.png"><span>Instant Call Back</span></li>
+                                 <li><img src="images/modal-visit.png"><span>Free Site Visit</span></li>
+                                 <li><img src="images/modal-price.png"><span>Unmatched Price</span></li>
+                              </ul>
+                           </div>
+                           <button type="button"
+                              class="btn btn-warning enquire-btn effetMoveGradient effectScale"
+                              data-toggle="modal" data-target="#exampleModal">Enquire Now</button>
                         </div>
                      </div>
 
